# ChangeLog for media-libs/imlib2
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/imlib2/ChangeLog,v 1.46 2005/12/11 23:52:11 spyderous Exp $

  11 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>;
  imlib2-1.2.1.009.ebuild, imlib2-9999.ebuild:
  Add modular X dependencies.

*imlib2-1.2.1.009 (13 Oct 2005)

  13 Oct 2005; Mike Frysinger <vapier@gentoo.org> +imlib2-1.2.1.009.ebuild:
  Version bump.

*imlib2-1.2.1.004 (20 Aug 2005)

  20 Aug 2005; Mike Frysinger <vapier@gentoo.org> :
  Version bump.

*imlib2-1.2.0.007-r2 (18 Aug 2005)

  18 Aug 2005; Mike Frysinger <vapier@gentoo.org> files/imlib2-PIC.patch,
  +imlib2-1.2.0.007-r2.ebuild:
  Fix PIC patch as pointed out by Peter Beutner in #102519.

  13 Aug 2005; Fabian Groffen <grobian@gentoo.org> imlib2-1.1.2.ebuild:
  Marked stable on ppc-macos

*imlib2-1.2.0.007-r1 (08 Aug 2005)

  08 Aug 2005; Mike Frysinger <vapier@gentoo.org> +files/imlib2-PIC.patch,
  +imlib2-1.2.0.007-r1.ebuild:
  Redo assembly to get rid of TEXTREls.

  28 Jul 2005; Mike Frysinger <vapier@gentoo.org>
  +files/imlib-1.2.0-bounds-check.patch, imlib2-1.2.0-r2.ebuild,
  imlib2-1.2.0.007.ebuild:
  Fix an out of bounds crash when using Digikam #96065  by Quintin Pan.

  04 Jun 2005; Dominik Stadler <centic@gentoo.org> imlib2-1.1.2.ebuild,
  imlib2-1.2.0-r2.ebuild, imlib2-1.2.0.007.ebuild, imlib2-9999.ebuild:
  Correct homepage

*imlib2-1.2.0-r2 (28 Feb 2005)

  28 Feb 2005; Mike Frysinger <vapier@gentoo.org> +imlib2-1.2.0-r2.ebuild:
  Make sure the imlib2.pc isnt installed with bad mojo #83107 by Heath H Holcomb.

*imlib2-1.2.0-r1 (21 Feb 2005)

  21 Feb 2005; Mike Frysinger <vapier@gentoo.org>
  +files/imlib2-1.2.0-loaders.patch, +imlib2-1.2.0-r1.ebuild,
  -imlib2-1.2.0.ebuild:
  Fix loaders when using python/perl/etc... #78112.

*imlib2-1.2.0.20041226 (08 Jan 2005)

  08 Jan 2005; Mike Frysinger <vapier@gentoo.org>