@@ -1,9 +1,9 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 f80c2fc29cb3e3ad5d8711cd5b413b23 ChangeLog 5333
-RMD160 a7844530c5a942b0ad532ffc503007e0b759c40c ChangeLog 5333
-SHA256 df231d9b24b4f78c91e71da6ba8fd7ada25e47065e7d79a606f7d3a24d609b3a ChangeLog 5333
+MD5 7fb0f5a9a55b71747faac5343d2de9ed ChangeLog 5494
+RMD160 a787bc34ebbf5796d16da0538adeef2ed8e8b57d ChangeLog 5494
+SHA256 99c2a7cbe8bc65585203ad6b1db54f34fb7ebdc69ccaa94a1c247151d40ae565 ChangeLog 5494
 MD5 00966d224a91444676648c49ecc1eaf4 files/digest-imlib2-1.2.0-r2 64
 RMD160 05b1b5ef220f4b1445f80044e8a6975b68e61ba5 files/digest-imlib2-1.2.0-r2 64
 SHA256 dbdc6e929363f6fe18561ae2afa1ae1897363a379db94b2dc1c496602743e863 files/digest-imlib2-1.2.0-r2 64
@@ -28,9 +28,9 @@ SHA256 85ab6e49c0abe0e6f486d3674d4e37addfd0f3d9de452d7c52835efeb1820835 imlib2-1
 MD5 5623d3346f0badbe8f7bf3749242f027 imlib2-1.2.1.006.ebuild 1268
 RMD160 37ed2ff0ec53b2d84a44fd34ecf36b2900acbd5f imlib2-1.2.1.006.ebuild 1268
 SHA256 fa78d3fb82161a3cd403de8b5a998108d429102dd094b17997822e1c172e4080 imlib2-1.2.1.006.ebuild 1268
-MD5 488414d5673e4883b02de396983626fa imlib2-1.2.1.009.ebuild 1289
-RMD160 92607fca26cc7ed2eafb8f1d5ed5df9ba091de38 imlib2-1.2.1.009.ebuild 1289
-SHA256 630fff2e470a7beb985e990b11a9c796e04931d26be96f075e99dc67cf17e859 imlib2-1.2.1.009.ebuild 1289
+MD5 550e2a8bed4a09d589c7dc20f7841788 imlib2-1.2.1.009.ebuild 1390
+RMD160 b8520de7fc58a6a3c18b8c5cd69f690c6acf9489 imlib2-1.2.1.009.ebuild 1390
+SHA256 e193f2705e81122c16720df0909de3ad7e3c753e626e447953247a1b06930a75 imlib2-1.2.1.009.ebuild 1390
 MD5 83796a043d27191c79ef73870de358d4 imlib2-9999.ebuild 1264
 RMD160 f4b25f508e582bad3b1a07d2c8760d1e90412cbf imlib2-9999.ebuild 1264
 SHA256 193f7dde30a54d9f9bc9835eb827dcd441a684e878156b8913a80d2b31765a21 imlib2-9999.ebuild 1264
@@ -38,9 +38,9 @@ MD5 0c36280f1141c2ab86d0bd09ceec038a metadata.xml 2284
 RMD160 1beb3cfbdf7bf582e2d534ee2c6e7d0daedc1e2b metadata.xml 2284
 SHA256 a3fe8a53761d20a0718156eef74c69648fd587cbe4dc29ee90b214b7ee0a028b metadata.xml 2284
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.2 (GNU/Linux)
+Version: GnuPG v1.4.2.2 (GNU/Linux)
 
-iD8DBQFD7B+u2+ySkm8kpY0RAgGtAJ46vjsCmYY+RMmkBljYu3hCbP8zlgCfZ5iF
-nf+z7BgRnqOZ36iON/IXVJk=
-=0ltU
+iD8DBQFEP+dpAiZjviIA2XgRAocbAKDnyROy1iVjbbJ6yyNdV7sEFxJFiwCfWsJP
+Qpzx2BcQYz3T2S4yBYOcqp8=
+=s7MH
 -----END PGP SIGNATURE-----
